# simul

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
simul/: __init__.py  clients.py  endpoints.py  formats.py  models.py  session.py  utils.py
tests/: test_callable_stream_endpoint.py  test_client.py  test_client_account.py  test_data.json  test_endpoint.py  test_endpoint_stream.py  test_fixtures.py  test_requestor.py  test_session.py  test_stream.py  tests.ini
tests/client/: test_client.py  test_client_account.py  test_client_challenges.py  test_client_games.py  test_client_teams.py  test_client_user.py  test_client_users.py
tests/endpoint/: test_endpoint.py  test_endpoint_stream.py
tests/requestor/: test_requestor.py  test_requestor_stream.py
