[tool.poetry]
name = "simul"
version = "0.1.0"
description = "Asynchronous Python client for the Lichess API"
authors = ["Philipp Leclercq <liboard@mailbox.org>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.21.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
flake8-docstrings = "^1.6.0"
pytest-asyncio = "^0.18.2"

[tool.autopep8]
max-line-length = 99

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
